deployment-folder/aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-ingress
  #namespace: argocd
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080

          # - path: /checkimage
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: aicheckimage
          #       port:
          #         number: 8111
